k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    name: backend
  namespace: acme-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/marianotests/github.com/mtoscanom/acme-backend:latest
          ports:
            - containerPort: 5000
              name: backend
          resources: {}
