k8s/backend/netpol-backend-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-access
  namespace: acme-shop
spec:
  podSelector:
    matchLabels:
      name: backend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: frontend
      ports:
        - protocol: TCP
          port: 5000
